// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`config utils > should handle config with special characters in values 1`] = `
"import { AwsNxPluginConfig } from '@aws/nx-plugin';

export default {
  license: {
    header: {
      content: { lines: ['Copyright "Foo" Inc.'] },
      format: {
        '**/*.{js,ts,jsx,tsx}': {
          blockStart: '/**',
          lineStart: ' * ',
          blockEnd: ' */',
        },
      },
    },
  },
} satisfies AwsNxPluginConfig;
"
`;

exports[`config utils > should handle config without satisfies clause 1`] = `
"export default { iac: { provider: 'CDK' } };
"
`;

exports[`config utils > should snapshot config with tags 1`] = `
"import { AwsNxPluginConfig } from '@aws/nx-plugin';

export default { tags: ['tag1', 'tag2', 'tag3'] } satisfies AwsNxPluginConfig;
"
`;

exports[`config utils > should snapshot merged config with multiple keys 1`] = `
"import { AwsNxPluginConfig } from '@aws/nx-plugin';

export default {
  iac: { provider: 'CDK' },
  tags: ['tag1'],
} satisfies AwsNxPluginConfig;
"
`;

exports[`config utils > should snapshot simple iac config 1`] = `
"import { AwsNxPluginConfig } from '@aws/nx-plugin';

export default { iac: { provider: 'CDK' } } satisfies AwsNxPluginConfig;
"
`;

exports[`config utils > should update user config 1`] = `
"import { AwsNxPluginConfig } from '@aws/nx-plugin';

export default {
  license: {
    header: {
      content: { lines: ['Test Copyright Header'] },
      format: {
        '**/*.ts': { blockStart: '/**', lineStart: ' * ', blockEnd: ' */' },
      },
    },
  },
} satisfies AwsNxPluginConfig;
"
`;
